recursion.cons.nth.Nth.scala.error
Erreur de compilation :
Nth:4: error: not found: value c
    c=count + 1;
    ^Nth:5: error: not found: value c
    if(c == tn){
       ^Nth:9: error: not found: value c
      return lambda(l.tail, n, c);
                               ^