recursion.cons.nth.Nth.scala.code
def nth(l:List[Int], n:Int): Int = {
  def lambda(tl:List[Int], tn:Int, count:Int): Int = {
    c=count + 1;
    if(c == tn){
      return l.head;
    }
    else{
      return lambda(l.tail, n, c);
    }
  }
  return lambda(l,n,0);
}